--- a/server/app/views/planning/weekly/weeklyView.scala.html
+++ b/server/app/views/planning/weekly/weeklyView.scala.html
@@ -28,13 +28,12 @@
 
     <section id="class-timetable-section">
 
-        <div class="table-responsive">
-            <table class="table table-sm table-bordered table-dark">
-                <caption>Weekly Timetable</caption>
-
-                <thead >
+        <div class="table-responsive-md">
+            <table class="table table-sm table-light ">
+                <thead class="">
                     <tr>
-                        <th scope="col" class="align-top text-center">Day</th>
+                        <th scope="col" class="align-top text-center" width="100px"></th>
+                        <th scope="col"><div class="col"></div></th>
                         @for((schoolTimeBoundary, index) <- classTimetable.schoolTimes.schoolSessionBoundaries.sortBy(time => time.sessionBoundary.boundaryStartTime.timeIso8601).zipWithIndex) {
                             @if(schoolTimeBoundary.sessionBoundary.boundaryType == SessionBoundaryType.START_OF_TEACHING_SESSION) {
                                 <th scope="col" >
@@ -54,7 +53,7 @@
                                     </div>
                                 </th>
                                 @if((index + 2) < classTimetable.schoolTimes.schoolSessionBoundaries.size) {
-                                    <th scope="col" class="bg-light"></th>
+                                    <th scope="col" ></th>
                                 }
                             }
                         }
@@ -64,23 +63,68 @@
                 <tbody>
                 @for(dayOfTheWeek <- List("MONDAY", "TUESDAY", "WEDNESDAY", "THURSDAY", "FRIDAY")) {
                     <tr>
-                        <td>
-                        @dayOfTheWeek
+                        <td class="align-middle text-center">
+                            <h6>
+                            @dayOfTheWeek.toLowerCase.capitalize
+                            </h6>
                         </td>
+                        <th scope="col" class=""><div class="col"></div></th>
                         @for((session, sessionIndex) <- classTimetable.allSessionsOfTheWeek.sortBy(sesh => (sesh.sessionOfTheDay.dayOfTheWeek.ordinal(), sesh.sessionOfTheDay.startTime.timeIso8601)).map(wrapper => wrapper.sessionOfTheDay).zipWithIndex) {
                             @if(session.dayOfTheWeek.toString == dayOfTheWeek) {
                                 <td>
                                     <div class="row">
                                     @for(subject <- session.subjects) {
-                                        <div class="col">
-                                            <p>@subject.subjectDetail.subjectName</p>
+                                        <div class="col weekly-plan-subject" >
+                                            <div class="rounded fancy-shadow weekly-plan-subject-@subject.subjectDetail.subjectName.toString.toLowerCase.replace("_", "-")">
+                                                <div class="text-center weekly-plan-subject-name "><u>@{
+                                                    val subjectName = subject.subjectDetail.subjectName.toString.toLowerCase.split("_").toList.map(word => word.capitalize).mkString(" ")
+                                                    if(subjectName == "Other") {
+                                                        subject.subjectDetail.additionalInfo.value
+                                                    } else {
+                                                        subjectName
+                                                    }
+                                                }
+                                                </u>
+                                                </div>
+
+                                                <div class="text-center weekly-plan-subject-additional-info text-dark">
+                                                    <small>
+                                                    @{
+                                                        val subjectName = subject.subjectDetail.subjectName.toString.toLowerCase.split("_").toList.map(word => word.capitalize).mkString(" ")
+                                                        if(subjectName != "Other") {
+                                                            subject.subjectDetail.additionalInfo.value
+                                                        }
+                                                    }
+                                                    </small>
+                                                </div>
+
+                                                <div class="weekly-plan-subject-es-and-os">
+                                                    <p class="lead">
+                                                        Es & Os
+                                                    </p>
+                                                    <p>
+                                                        EO123, EO124, EO124
+                                                    </p>
+                                                </div>
+
+                                                <div class="weekly-plan-subject-benchmarks">
+                                                    <p class="lead">
+                                                        Benchmarks
+                                                    </p>
+                                                    <p>Some benchmark one</p>
+                                                    <p>Some benchmark two</p>
+                                                    <p>Some benchmark three</p>
+                                                    <p>Some benchmark four</p>
+                                                </div>
+
+                                            </div>
                                         </div>
                                     }
                                 </td>
                                 @if((sessionIndex + 1) > (classTimetable.allSessionsOfTheWeek.count(sesh => sesh.sessionOfTheDay.dayOfTheWeek.toString == dayOfTheWeek) % 3) &&
-                                        (((sessionIndex  % classTimetable.allSessionsOfTheWeek.count(sesh => sesh.sessionOfTheDay.dayOfTheWeek.toString == dayOfTheWeek)) + 1) <
+                                        (((sessionIndex % classTimetable.allSessionsOfTheWeek.count(sesh => sesh.sessionOfTheDay.dayOfTheWeek.toString == dayOfTheWeek)) + 1) <
                                                 classTimetable.allSessionsOfTheWeek.filter(sesh => sesh.sessionOfTheDay.dayOfTheWeek.toString == dayOfTheWeek).count(sesh => sesh.sessionOfTheDay.dayOfTheWeek.toString == dayOfTheWeek))) {
-                                    <td class="bg-light"></td>
+                                    <td class=""><div class="col"></div></td>
                                 }
                             }
                         }
