--- a/server/app/views/planning/weekly/weeklyView.scala.html
+++ b/server/app/views/planning/weekly/weeklyView.scala.html
@@ -102,9 +102,7 @@
                                                     <p class="lead">
                                                         Es & Os
                                                     </p>
-                                                    <p>
-                                                        EO123, EO124, EO124
-                                                    </p>
+                                                    <p>EO123 - The quick brown fox jumps over the lazy dog</p>
                                                 </div>
 
                                                 <div class="weekly-plan-subject-benchmarks">
@@ -113,8 +111,6 @@
                                                     </p>
                                                     <p>Some benchmark one</p>
                                                     <p>Some benchmark two</p>
-                                                    <p>Some benchmark three</p>
-                                                    <p>Some benchmark four</p>
                                                 </div>
 
                                             </div>
